[gd_scene load_steps=11 format=2]

[ext_resource path="res://title_screen/fade_in/FadeIn.tscn" type="PackedScene" id=1]
[ext_resource path="res://title_screen/fonts/ARCADECLASSIC.TTF" type="FontFile" id=2]
[ext_resource path="res://04-นิคมอุตสาหกรรมโรงถลุงเหล็ก/000-EX.png" type="Texture2D" id=3]
[ext_resource path="res://04-นิคมอุตสาหกรรมโรงถลุงเหล็ก/fac_level/fac_hard/btn_fac_hard_ufo.tscn" type="PackedScene" id=4]
[ext_resource path="res://04-นิคมอุตสาหกรรมโรงถลุงเหล็ก/fac_level/fac_hard/btn_fac_hard_tank.tscn" type="PackedScene" id=5]
[ext_resource path="res://04-นิคมอุตสาหกรรมโรงถลุงเหล็ก/fac_level/fac_hard/btn_fac_hard_humvee.tscn" type="PackedScene" id=6]
[ext_resource path="res://04-นิคมอุตสาหกรรมโรงถลุงเหล็ก/fac_level/fac_hard/btn_fac_hard_moto.tscn" type="PackedScene" id=7]
[ext_resource path="res://04-นิคมอุตสาหกรรมโรงถลุงเหล็ก/fac_level/fac_hard/fac_hard_menu.gd" type="Script" id=8]
[ext_resource path="res://title_screen/back.tscn" type="PackedScene" id=9]

[sub_resource type="FontFile" id=1]
size = 157
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 8 )

[node name="000-EX" type="Sprite2D" parent="."]
position = Vector2( -1692.81, 76.2468 )
texture = ExtResource( 3 )

[node name="FadeIn" parent="." instance=ExtResource( 1 )]
offset_left = 0.96511
offset_top = -1.68856
offset_right = 6.96509
offset_bottom = 2.31146
clip_contents = true

[node name="Label" type="Label" parent="."]
offset_left = 64.8439
offset_top = 45.8653
offset_right = 1242.84
offset_bottom = 205.865
scale = Vector2( 0.75, 0.75 )
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 20
theme_override_fonts/font = SubResource( 1 )
text = "Escape war zone "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="humvee" parent="." instance=ExtResource( 6 )]
offset_left = 52.2014
offset_top = 209.537
offset_right = 344.201
offset_bottom = 288.537

[node name="moto" parent="." instance=ExtResource( 7 )]
offset_left = 650.92
offset_top = 217.945
offset_right = 942.92
offset_bottom = 296.945

[node name="tank" parent="." instance=ExtResource( 5 )]
offset_left = 53.8831
offset_top = 411.352
offset_right = 345.883
offset_bottom = 490.352

[node name="ufo" parent="." instance=ExtResource( 4 )]
offset_left = 674.465
offset_top = 401.261
offset_right = 966.465
offset_bottom = 480.261

[node name="back" parent="." instance=ExtResource( 9 )]
offset_left = 896.217
offset_top = 535.746
offset_right = 1072.22
offset_bottom = 614.746
scale = Vector2( 0.5, 0.5 )

[connection signal="pressed" from="humvee" to="." method="_on_humvee_pressed"]
[connection signal="pressed" from="moto" to="." method="_on_moto_pressed"]
[connection signal="pressed" from="tank" to="." method="_on_tank_pressed"]
[connection signal="pressed" from="ufo" to="." method="_on_ufo_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
